syntax = "proto3";

package bubbaloop.header.v1;

// Common header for all image messages
message Header {
    uint64 acq_time = 1;    // Acquisition timestamp (nanoseconds)
    uint64 pub_time = 2;    // Publication timestamp (nanoseconds)
    uint32 sequence = 3;    // Frame sequence number
    string frame_id = 4;    // Camera/frame identifier
}
